--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -22,11 +22,13 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
+	@echo "\033[32m zombie built successfully! \033[0m"
 
 %.o: %.cpp
 	$(CC) $(FLAGS) -c $< -o $@
 
 clean:
+	@echo "\033[34m cleaning up... \033[0m"
 	rm -f $(OBJ)
 
 fclean: clean
