--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -21,11 +21,11 @@ OBJ = $(SRC:.cpp=.o)
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
+	@$(CC) $(FLAGS) $(OBJ) -o $(NAME)
 	@echo "\033[32m brain built successfully! \033[0m"
 
 %.o: %.cpp
-	$(CC) $(FLAGS) -c $< -o $@
+	@$(CC) $(FLAGS) -c $< -o $@
 
 clean:
 	@echo "\033[34m cleaning up... \033[0m"
